# context-pruning-research

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  FINAL_SUMMARY.md  LICENSE  MANIFEST.in  PUBLIC_READINESS_CHECKLIST.md  PUBLIC_RELEASE_SUMMARY.md  README.md  VERIFIED_RESULTS.md  VERIFIED_RESULTS_SUMMARY.md  context-pruning.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_benchmark_results.json
.github/workflows/: ci.yml
context_pruning/: __init__.py  cli.py  engine.py
docs/: README.md  api-reference.md  best-practices.md  case-studies.md  contributing.md  core-concepts.md  evidence-standard.md  faq.md  glossary.md  implementation-guide.md  introduction.md  performance-metrics.md  problem-statement.md  technical-spec.md
examples/: README.md  basic_pruning.py  basic_pruning.sh  package_content.json
implementation/: benchmark.ps1  benchmark.py  context_pruning.py  simple_benchmark.ps1
schemas/: 01-context-package-schema.md  02-tag-bundle-examples.md
spec/: 00-overview.md  01-tagging-system.md  02-context-packages.md  03-pruning-algorithm.md  04-memory-integration.md  05-implementation-notes.md
tests/: README.md  test_benchmark.py  test_cli.py  test_context_isolation.py  test_context_isolation.sh  test_engine.py
