[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-pruning-research"
version = "0.1.0"
description = "Research on context pruning for LLM context management"
authors = [
    {name = "Max Stern", email = "maxrstrn@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
context-pruning = "context_pruning.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-html>=3.1.1",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "isort>=5.8.0",
    "mypy>=0.812",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "pre-commit>=2.13.0",
    "jupyter>=1.0.0",
    "ipython>=7.24.0",
]

[project.urls]
Homepage = "https://github.com/Mxcks/context-pruning-research"
Documentation = "https://github.com/Mxcks/context-pruning-research/blob/master/docs/README.md"
Repository = "https://github.com/Mxcks/context-pruning-research"
"Bug Tracker" = "https://github.com/Mxcks/context-pruning-research/issues"

[tool.setuptools.packages.find]
include = ["context_pruning*"]
exclude = ["implementation*", "spec*", "docs*", "examples*", "tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
addopts = [
    "--verbose",
    "--cov=context_pruning",
    "--cov-report=html",
    "--cov-report=term-missing",
]
